Change Register Auth and Create Todo status code from 200 to 201
